add local geo-json-tools